--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-    background-color: grey;
+    background-color: var(--background-col);
     font-family: Roboto;
     --navitem-not-active: white;
-    --navitem-active: rgb(0, 89, 253);
+    --main-red: rgb(254, 74, 73);
+    --main-yellow: rgb(254, 215, 102);
+    --main-blue: rgb(0, 159, 183);
+    --background-col: rgb(36, 36, 36);
+}
+
+.App > * {
+    padding: 0 15%;
 }
 
 /*
@@ -15,21 +22,71 @@ Navbar.
     top: 0px;
     position: sticky;
     position: -webkit-sticky; /* Safari */
+    justify-content: right;
+    background-color: rgba(15, 15, 15, 0.5);
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 #ah {
     text-decoration: none;
-    color: var(--navitem-active);
+    color: var(--main-red);
+    margin-right: auto;
+    font-size: 36px;
+    font-weight: 800;
 }
 
 .NavLink, .NavLinkActive {
     text-decoration: none;
+    margin-left: 40px;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .NavLink {
-    color: var(--navitem-not-active);
+    color: var(--main-red);
 }
 
 .NavLinkActive {
-    color: var(--navitem-active);
+    color: white;
+}
+
+/*
+Home.
+*/
+.Home {
+    color: rgb(209, 209, 209);
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: auto;
+}
+
+.home-top-left {
+    display: flex;
+    flex-direction: column;
+    font-size: 30px;
+    border: 3px solid yellow;
+    font-weight: 500;
+}
+
+.home-top-right {
+    border: 3px solid greenyellow;
+}
+
+.home-bottom-left {
+    border: 3px solid red;
+}
+
+.home-bottom-right {
+    border: 3px solid teal;
+}
+
+#hello {
+    color: var(--main-yellow);
+}
+
+.typewriter-wrapper {
+    display: flex;
+    flex-wrap: wrap;
 }
